# ironjacamar

./: .classpath  .gitignore  .project  .travis.yml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.txt  SECURITY.md  build.gradle  build.xml  build.xml~  gradle.properties  ivy.settings.xml  ivy.xml  pom.xml  settings.gradle
.github/: dependabot.yml
adapter/: .classpath  .project  pom.xml
adapters/: .classpath  .project  build.xml  pom.xml
api/: .classpath  .project  build.gradle  build.xml  pom.xml
arquillian/: .classpath  .project  build.xml
as/: .classpath  .project  build.xml  pom.xml
codegenerator/: .classpath  .project  build.gradle  build.xml  pom.xml
common/: .classpath  .project  build.gradle  build.xml  pom.xml
core/: .classpath  .project  build.gradle  build.xml  pom.xml
deployers/: .classpath  .project  build.gradle  build.xml  pom.xml
doc/: build.gradle  build.xml
docs/: pom.xml
docs/samples/helloworld-native/: CMakeLists.txt
docs/samples/helloworld-native/src/main/java/org/jboss/jca/samples/helloworld/: HelloWorldConnectionFactory.java  HelloWorldManagedConnection.java  HelloWorldManagedConnectionFactory.java
eclipse/: .classpath  .project  build.properties  build.xml  plugin.xml  pom.xml
ee-9/: pom.xml
eis/: .classpath  .project  build.gradle  build.xml  pom.xml
embedded/: .classpath  .project  build.gradle  build.xml  pom.xml
fungal/: .classpath  .project  build.xml
rarinfo/: build.gradle
rhq/: .classpath  .project  build.xml
sjc/: .classpath  .project  build.gradle  build.xml  pom.xml
(+5742 files in other folders)
